--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.3.0",
+    "devextreme": "23.2.4",
+    "devextreme-angular": "23.2.4",
+    "devextreme-cli": "^1.6.7",
+    "devextreme-schematics": "^1.6.7",
+    "form-validate-angular": "^17.0.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -27,6 +34,8 @@
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "23.2.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
